# aws-lambda-handler-cookbook

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .markdownlint.yaml  .pre-commit-config.yaml  .style  404.html  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  Makefile_windows  Pipfile  README.md  SECURITY.md  app.py  cdk.html  cdk.json  dev_requirements.txt  generate_openapi.py  getting_started.html  index.html  lambda_requirements.txt  llms.txt  mac_linux_makefile.md  merge.py  mkdocs.yml  mypy.ini  package-lock.json  package.json  pipeline.html  pyproject.toml  samconfig.toml  template.yaml  updated_windows_makefile.md  windows_makefile.md  zensical.toml
.claude/: settings.json
.claude/rules/: cdk.md  dependencies.md  docs.md  git-pr.md  github-actions.md  makefile.md  models.md  security.md  service.md  testing.md
.github/: FUNDING.yml  dependabot.yml  release.yml
.github/skills/ai-sdlc/: skill.md
.github/workflows/: aws-deploy.yml  codeql-analysis.yml  codeql-analysis.yml.yml  codeql.yml  comment_issues.yml  main-serverless-service.yml  pr-labeler.yml  pr-serverless-service.yml  python-app.yml  scorecard.yml  semantic.yml  serverless-service.yml  snyk-infrastructure.yml
aidlc-docs/: aidlc-state.md  audit.md
aidlc-docs/inception/requirements/: requirement-verification-questions.md
aidlc-docs/inception/reverse-engineering/: api-documentation.md  architecture.md  business-overview.md  code-quality-assessment.md  code-structure.md  component-inventory.md  dependencies.md  reverse-engineering-timestamp.md  technology-stack.md
app/: extend_schema_example.py  handler.py  powertools_handler.py  requirements.txt
best_practices/: dynamic_configuration.html  environment_variables.html  index.html  input_validation.html  logger.html  metrics.html  monitoring.html  tracer.html
best_practices/dynamic_configuration/: index.html
best_practices/environment_variables/: index.html
best_practices/input_validation/: index.html
best_practices/logger/: index.html
best_practices/metrics/: index.html
best_practices/monitoring/: index.html
best_practices/tracer/: index.html
cdk/: app.py  index.html  pyproject.toml  setup.py
cdk/aws_lambda_handler_cookbook/: app.py
cdk/aws_lambda_handler_cookbook/service_stack/: constants.py  cookbook_construct.py  cookbook_stack.py  service_construct.py  service_stack.py
cdk/aws_lambda_handler_cookbook/service_stack/configuration/: configuration_construct.py
cdk/aws_lambda_handler_cookbook/service_stack/configuration/json/: dev_configuration.json
cdk/my_service/: api_construct.py  api_db_construct.py  app.py  constants.py  service_construct.py  service_stack.py
cdk/my_service/configuration/: configuration_construct.py
cdk/my_service/service_stack/: constants.py  service_construct.py  service_stack.py
cdk/my_service/service_stack/configuration/: configuration_construct.py  schema.py
cdk/service/: api_construct.py  api_db_construct.py  appsync_events_construct.py  bedrock.py  constants.py  lambda_managed_instance_construct.py  monitoring.py  service_stack.py  utils.py  waf_construct.py
cdk/service/configuration/: configuration_construct.py  schema.py
cdk/service/configuration/json/: dev_configuration.json
cdk/service/security/: governance_scan.py  waf_construct.py
changelog/: index.html
contributing/: index.html
docs/: cdk.md  changelog.md  contributing.md  getting_started.md  index.md  pipeline.md
docs/best_practices/: dynamic_configuration.md  environment_variables.md  index.md  input_validation.md  logger.md  managed_instances.md  metrics.md  monitoring.md  tracer.md
docs/javascripts/: mermaid-zoom.js  swagger-init.js
docs/stylesheets/: extra.css
docs/swagger/: openapi.json  swagger.md
events/: sqs.json
examples/best_practices/dynamic_configuration/: cdk_appconfig.py  configuration.json  configuration_schema.py  lambda_cdk.py  mock.py  parse_configuration.py
examples/best_practices/environment_variables/: getter.py  my_handler.py
examples/best_practices/logger/: my_handler.py
getting_started/: index.html
pipeline/: index.html
search/: search_index.json
service/: my_handler.py
service/dal/: __init__.py  db_handler.py  dynamo_dal_handler.py
service/dal/models/: db.py
service/dal/schemas/: db.py
service/handlers/: create_order.py  handle_create_order.py  handle_delete_order.py  handle_get_order.py  handle_list_orders.py  my_handler.py  publish.py  test_handle_delete_order.py
service/handlers/models/: dynamic_configuration.py  env_vars.py
service/handlers/schemas/: dynamic_configuration.py  env_vars.py  input.py  output.py
service/handlers/utils/: dynamic_configuration.py  env_vars_parser.py  http_responses.py  idempotency.py  observability.py  rest_api_resolver.py
service/logic/: create_order.py  delete_order.py  get_order.py  handle_create_request.py  list_orders.py  test_delete_order.py
service/logic/utils/: idempotency.py
service/models/: exceptions.py  input.py  order.py  output.py  test_input.py  test_output.py
service/schemas/: exceptions.py  input.py  output.py
service/tests/e2e/: test_delete_order.py
service/utils/: infra.py  utils.py
swagger/: openapi.json  swagger.html
swagger/swagger/: index.html  openapi.json
tests/: conftest.py  requirements.txt  utils.py
tests/e2e/: conftest.py  test_create_order.py  test_delete_order.py  test_get_order.py  test_list_orders.py  test_my_handler.py
tests/infrastructure/: test_cdk.py  test_cdk_nag.py
tests/integration/: conftest.py  test_campaign.py  test_create_order.py  test_delete_order.py  test_feature_flags.py  test_flags.py  test_get_order.py  test_list_orders.py  test_my_handler.py  test_stuff.py
tests/unit/: __init__.py  test_create_order_input.py  test_create_order_output.py  test_dal_schema.py  test_db_handler.py  test_delete_order_output.py  test_env_vars_parser.py  test_get_order_output.py  test_handler.py  test_handler_env_vars.py  test_list_orders_output.py  test_my_handler.py  test_my_handler_input.py  test_my_handler_output.py  test_parse_configuration.py
(+38 files in other folders)
